--- a/SecretSanta.ipynb
+++ b/SecretSanta.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "32bba16c",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
     "        )\n",
     "\n",
     "    with smtplib.SMTP_SSL(\"smtp.gmail.com\", 465) as server:\n",
-    "        server.login(\"secretsantacadimostach@gmail.com\", \"xexbdwfuugkvtaep\")\n",
+    "        server.login(\"yourSantaEmail@mail.com\", \"Password\")\n",
     "        server.send_message(msg)\n"
    ]
   },
