--- a/SecretSanta.ipynb
+++ b/SecretSanta.ipynb
@@ -64,22 +64,22 @@
     "from email.message import EmailMessage\n",
     "from email.utils import make_msgid\n",
     "\n",
-    "def send_email(destinatario, nome_giver, nome_receiver):\n",
+    "def send_email(receiver_email, giver_name, receiver_name):\n",
     "    msg = EmailMessage()\n",
     "    msg[\"Subject\"] = \"🎅 Secret Santa 🎁\"\n",
     "    msg[\"From\"] = \"Babbo Natale\"\n",
-    "    msg[\"To\"] = destinatario\n",
+    "    msg[\"To\"] = receiver_email\n",
     "\n",
     "    image_cid = make_msgid(domain=\"secretsanta\")\n",
     "    \n",
     "    html = f\"\"\"\n",
     "    <html>\n",
     "        <body style=\"font-family: Arial;\">\n",
-    "            <h2>Ciao {nome_giver} 🎄</h2>\n",
+    "            <h2>Ciao {giver_name} 🎄</h2>\n",
     "\n",
     "            <p>Sei stato scelto come <b>Secret Santa</b> per:</p>\n",
     "\n",
-    "            <h1 style=\"color: red;\">🎁 {nome_receiver} 🎁</h1>\n",
+    "            <h1 style=\"color: red;\">🎁 {receiver_name} 🎁</h1>\n",
     "\n",
     "            <img src=\"cid:{image_cid[1:-1]}\" width=\"300\">\n",
     "\n",
@@ -91,7 +91,7 @@
     "\n",
     "    msg.add_alternative(html, subtype=\"html\")\n",
     "\n",
-    "    with open(\"Pictures/\"+ nome_receiver + \".png\", \"rb\") as img:\n",
+    "    with open(\"Pictures/\"+ receiver_name + \".png\", \"rb\") as img:\n",
     "        msg.get_payload()[0].add_related(\n",
     "            img.read(),\n",
     "            maintype=\"image\",\n",
@@ -115,10 +115,10 @@
     "\n",
     "for email, info in pairings.items():\n",
     "    send_email(\n",
-    "        destinatario=email,\n",
-    "        nome_giver=info[\"giver\"],\n",
-    "        nome_receiver=info[\"receiver\"]\n",
-    "    )\n"
+    "        receiver_email=email,\n",
+    "        giver_name=info[\"giver\"],\n",
+    "        receiver_name=info[\"receiver\"]\n",
+    "    )"
    ]
   }
  ],
