--- a/SecretSanta.ipynb
+++ b/SecretSanta.ipynb
@@ -2,32 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
+   "id": "9c05ed50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#WRITE HERE THE EMAIL ADDRESS YOU WILL USE TO SEND ALL THE EMAILS AND THE PASSWORD TO LOG INTO IT\n",
+    "EMAIL = \"santaEmail@santa.claus\"\n",
+    "PASSWORD = \"Password\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "ec7fb565",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ADD PARTICIPANTS HERE WITH THEIR NAMES AND EMAILS\n",
     "participants = [\n",
-    "    {\"name\": \"Mario\", \"email\": \"mario.rossi@mail.com\"},\n",
-    "    {\"name\": \"Luigi\", \"email\": \"luigi.ferrari@mail.com\"},\n",
+    "    {\"name\": \"Mario\", \"email\": \"mario@santa.claus\"},\n",
+    "    {\"name\": \"Luigi\", \"email\": \"luigi@santa.claus\"},\n",
     "]\n",
-    "\n",
     "\n",
     "names = [p[\"name\"] for p in participants]\n",
     "\n",
     "if len(names) != len(set(names)):\n",
-    "    raise ValueError(\"❌ Duplicated names in the participants\")\n",
+    "    raise ValueError(\"Duplicated names in the participants\")\n",
     "\n",
     "\n",
     "emails = [p[\"email\"] for p in participants]\n",
     "\n",
     "if len(emails) != len(set(emails)):\n",
-    "    raise ValueError(\"❌ Duplicated emails in the participants\")"
+    "    raise ValueError(\"Duplicated emails in the participants\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "id": "61af1163",
    "metadata": {},
    "outputs": [],
@@ -55,52 +67,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "32bba16c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import smtplib\n",
     "from email.message import EmailMessage\n",
-    "from email.utils import make_msgid\n",
     "\n",
     "def send_email(receiver_email, giver_name, receiver_name):\n",
     "    msg = EmailMessage()\n",
     "    msg[\"Subject\"] = \"🎅 Secret Santa 🎁\"\n",
-    "    msg[\"From\"] = \"Babbo Natale\"\n",
+    "    msg[\"From\"] = \"Santa Claus\"\n",
     "    msg[\"To\"] = receiver_email\n",
     "\n",
-    "    image_cid = make_msgid(domain=\"secretsanta\")\n",
-    "    \n",
-    "    html = f\"\"\"\n",
-    "    <html>\n",
-    "        <body style=\"font-family: Arial;\">\n",
-    "            <h2>Ciao {giver_name} 🎄</h2>\n",
+    "    #SET THE MESSAGE THAT WILL BE SENT IN THE EMAIL\n",
+    "    message = f\"\"\"\n",
+    "    Hi {giver_name}!\n",
     "\n",
-    "            <p>Sei stato scelto come <b>Secret Santa</b> per:</p>\n",
+    "    🎁 You have been chosen as Secret Santa for:\n",
     "\n",
-    "            <h1 style=\"color: red;\">🎁 {receiver_name} 🎁</h1>\n",
+    "    👉 {receiver_name}\n",
     "\n",
-    "            <img src=\"cid:{image_cid[1:-1]}\" width=\"300\">\n",
-    "\n",
-    "            <p>Mi raccomando, non dirlo a nessuno 😉</p>\n",
-    "            <p><i>Buon Natale!</i></p>\n",
-    "        </body>\n",
-    "    </html>\n",
+    "    Don't tell anybody 😄\n",
+    "    Merry Christmas!\n",
     "    \"\"\"\n",
     "\n",
-    "    msg.add_alternative(html, subtype=\"html\")\n",
-    "\n",
-    "    with open(\"Pictures/\"+ receiver_name + \".png\", \"rb\") as img:\n",
-    "        msg.get_payload()[0].add_related(\n",
-    "            img.read(),\n",
-    "            maintype=\"image\",\n",
-    "            subtype=\"png\",\n",
-    "            cid=image_cid\n",
-    "        )\n",
+    "    msg.set_content(message)\n",
     "\n",
     "    with smtplib.SMTP_SSL(\"smtp.gmail.com\", 465) as server:\n",
-    "        server.login(\"yourSantaEmail@mail.com\", \"Password\")\n",
+    "        server.login(EMAIL, PASSWORD)\n",
     "        server.send_message(msg)\n"
    ]
   },
@@ -111,14 +107,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CREATE THE PAIRINGS\n",
     "pairings = extract_secret_santa(participants)\n",
     "\n",
+    "#SEND EMAILS TO ALL PARTICIPANTS\n",
     "for email, info in pairings.items():\n",
     "    send_email(\n",
     "        receiver_email=email,\n",
     "        giver_name=info[\"giver\"],\n",
     "        receiver_name=info[\"receiver\"]\n",
-    "    )"
+    "    )\n",
+    "    print(f\"Email sent to {email}\")"
    ]
   }
  ],
