changed message position in code

--- a/SecretSanta.ipynb
+++ b/SecretSanta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "id": "9c05ed50",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "id": "ec7fb565",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
+   "id": "066b09af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SET THE MESSAGE THAT WILL BE SENT IN THE EMAIL\n",
+    "EMAIL_TEXT = \"\"\"\n",
+    "Hi {giver_name}!\n",
+    "\n",
+    "🎁 You have been chosen as Secret Santa for:\n",
+    "\n",
+    "👉 {receiver_name}\n",
+    "\n",
+    "Don't tell anybody 😄\n",
+    "Merry Christmas!\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "61af1163",
    "metadata": {},
    "outputs": [],
@@ -67,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "id": "32bba16c",
    "metadata": {},
    "outputs": [],
@@ -81,17 +101,10 @@
     "    msg[\"From\"] = \"Santa Claus\"\n",
     "    msg[\"To\"] = receiver_email\n",
     "\n",
-    "    #SET THE MESSAGE THAT WILL BE SENT IN THE EMAIL\n",
-    "    message = f\"\"\"\n",
-    "    Hi {giver_name}!\n",
-    "\n",
-    "    🎁 You have been chosen as Secret Santa for:\n",
-    "\n",
-    "    👉 {receiver_name}\n",
-    "\n",
-    "    Don't tell anybody 😄\n",
-    "    Merry Christmas!\n",
-    "    \"\"\"\n",
+    "    message = EMAIL_TEXT.format(\n",
+    "        giver_name=giver_name,\n",
+    "        receiver_name=receiver_name\n",
+    "    )\n",
     "\n",
     "    msg.set_content(message)\n",
     "\n",
